--- a/index.html
+++ b/index.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>我的影片</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-    }
-    h1 {
-      margin-bottom: 30px;
-    }
-    .video {
-      margin-bottom: 40px;
-    }
-    iframe {
-      width: 100%;
-      max-width: 560px;
-      height: 315px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>我的影片</title>
+    <style>
+        body {
+            font-family: Arial, "Microsoft JhengHei", sans-serif;
+            text-align: center;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 40px;
+        }
+        h1 {
+            margin-bottom: 20px;
+        }
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            max-width: 800px;
+            margin: auto;
+        }
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
 
-  <h1>我的影片</h1>
+    <h1>我的影片</h1>
 
-  <div class="video">
-    <h2>成功用近端執行3個遊戲</h2>
-    <iframe 
-      src="https://www.youtube.com/watch?v=aBKY0UFCL-Q"
-      frameborder="0"
-      allowfullscreen>
-    </iframe>
-  </div>
+    <div class="video-container">
+        <iframe 
+            src="https://www.youtube.com/embed/aBKY0UFCL-Q"
+            title="我的影片"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+    </div>
+
+</body>
+</html>
