--- a/index.html
+++ b/index.html
@@ -1,48 +1,28 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <title>我的影片</title>
-    <style>
-        body {
-            font-family: Arial, "Microsoft JhengHei", sans-serif;
-            text-align: center;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 40px;
-        }
-        h1 {
-            margin-bottom: 20px;
-        }
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%;
-            height: 0;
-            max-width: 800px;
-            margin: auto;
-        }
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>我的影片</title>
+  <style>
+    body {
+      text-align: center;
+      font-family: Arial, "Microsoft JhengHei", sans-serif;
+    }
+  </style>
 </head>
 <body>
 
-    <h1>我的影片</h1>
+  <h1>我的影片</h1>
+  <h2>成功用近端執行3個遊戲</h2>
 
-    <div class="video-container">
-        <iframe 
-            src="https://www.youtube.com/embed/aBKY0UFCL-Q"
-            title="我的影片"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
-    </div>
+  <iframe
+    width="800"
+    height="450"
+    src="https://www.youtube.com/embed/aBKY0UFCL-Q"
+    title="我的影片"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
 
 </body>
 </html>
